# AIOC_Federation

intellexprotocolfederator/: README.md  pyproject.toml
intellexprotocolfederator/intellexprotocolfederator/: __init__.py  client_app.py  server_app.py  task.py
